[gd_scene load_steps=4 format=3 uid="uid://45w5xt47pdu7"]

[ext_resource type="Script" path="res://keybord_node_2d_main.gd" id="1_dk0cx"]
[ext_resource type="AudioStream" uid="uid://bvt5vcefrgw72" path="res://Songs/acerto.mp3" id="2_oxn7s"]
[ext_resource type="AudioStream" uid="uid://oyr05dib2djy" path="res://Songs/Erro.mp3" id="3_rriwf"]

[node name="Cena2DMain" type="Node2D"]
position = Vector2(0, 1)
script = ExtResource("1_dk0cx")

[node name="NodeMain" type="Node" parent="."]

[node name="LblScore" type="Label" parent="NodeMain"]
offset_left = 342.0
offset_top = 8.0
offset_right = 449.0
offset_bottom = 57.0
text = "Score: 0"
horizontal_alignment = 2

[node name="ButtoneD" type="Button" parent="NodeMain"]
editor_description = "
"
offset_left = 264.0
offset_top = 174.0
offset_right = 340.0
offset_bottom = 233.0
mouse_filter = 2
text = "D
"

[node name="ButtoneA" type="Button" parent="NodeMain"]
editor_description = "
"
offset_left = 107.0
offset_top = 173.0
offset_right = 183.0
offset_bottom = 232.0
mouse_filter = 2
text = "A
"

[node name="ButtoneW" type="Button" parent="NodeMain"]
editor_description = "
"
offset_left = 186.0
offset_top = 112.0
offset_right = 262.0
offset_bottom = 171.0
mouse_filter = 2
action_mode = 0
button_mask = 0
shortcut_feedback = false
text = "W
"

[node name="ButtoneS" type="Button" parent="NodeMain"]
editor_description = "
"
offset_left = 186.0
offset_top = 174.0
offset_right = 262.0
offset_bottom = 233.0
mouse_filter = 2
text = "S"

[node name="ButtoneEsc" type="Button" parent="NodeMain"]
editor_description = "
"
offset_left = 3.0
offset_top = 3.0
offset_right = 79.0
offset_bottom = 62.0
mouse_filter = 2
text = "Esc"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="NodeMain"]

[node name="bgMusicAcerto" type="AudioStreamPlayer" parent="NodeMain"]
stream = ExtResource("2_oxn7s")

[node name="bgMusicErro" type="AudioStreamPlayer" parent="NodeMain"]
stream = ExtResource("3_rriwf")

[connection signal="pressed" from="NodeMain/ButtoneD" to="." method="_on_buttone_d_pressed"]
[connection signal="pressed" from="NodeMain/ButtoneA" to="." method="_on_buttone_a_pressed"]
[connection signal="pressed" from="NodeMain/ButtoneW" to="." method="_on_buttone_w_pressed"]
[connection signal="pressed" from="NodeMain/ButtoneS" to="." method="_on_buttone_s_pressed"]
[connection signal="pressed" from="NodeMain/ButtoneEsc" to="." method="_on_buttone_esc_pressed"]
